# syshardn

./: CONTRIBUTING.md  GSOC-2026.md  README.md  build.ps1  build.sh  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  syshardn.spec
.github/workflows/: build.yml
rules/linux/: LNX-001-disable-cramfs.yaml  LNX-002-disable-freevxfs.yaml  LNX-009-disable-usb-storage.yaml  LNX-100-aslr-enabled.yaml  LNX-101-ipv4-forwarding-disabled.yaml  LNX-102-icmp-redirects-disabled.yaml  LNX-103-syn-cookies-enabled.yaml  LNX-104-source-routing-disabled.yaml  LNX-105-reverse-path-filtering.yaml  LNX-200-ssh-root-login-disabled.yaml  LNX-201-ssh-empty-passwords-disabled.yaml  LNX-202-ssh-max-auth-tries.yaml  LNX-203-ssh-client-alive-settings.yaml  LNX-300-enable-auditd.yaml  LNX-401-root-uid-zero.yaml  LNX-402-system-accounts-secured.yaml  LNX-403-nologin-not-valid-shell.yaml  LNX-500-etc-passwd-permissions.yaml  LNX-501-etc-shadow-permissions.yaml  LNX-502-etc-group-permissions.yaml  LNX-503-etc-gshadow-permissions.yaml  LNX-600-avahi-daemon-disabled.yaml  LNX-601-cups-disabled.yaml  LNX-602-bluetooth-disabled.yaml  LNX-603-snmp-disabled.yaml  LNX-700-systemd-journald-enabled.yaml  LNX-800-sudo-use-pty.yaml
rules/templates/: TEMPLATE.yaml
rules/windows/: WIN-001-password-history.yaml  WIN-002-password-max-age.yaml  WIN-003-password-min-age.yaml  WIN-004-password-min-length.yaml  WIN-005-password-complexity.yaml  WIN-006-password-reversible-encryption.yaml  WIN-010-account-lockout-duration.yaml  WIN-011-account-lockout-threshold.yaml  WIN-012-allow-admin-lockout.yaml  WIN-100-guest-account-disabled.yaml  WIN-110-require-ctrl-alt-del.yaml  WIN-111-dont-display-last-user.yaml  WIN-112-machine-inactivity-limit.yaml  WIN-120-restrict-anonymous-sam.yaml  WIN-130-no-lm-hash.yaml  WIN-140-uac-admin-approval-mode.yaml  WIN-142-uac-enable-lua.yaml  WIN-300-remote-desktop-disabled.yaml  WIN-301-remote-registry-disabled.yaml  WIN-302-error-reporting-disabled.yaml  WIN-800-firewall-private-enabled.yaml  WIN-801-firewall-private-inbound-block.yaml  WIN-810-firewall-public-enabled.yaml  WIN-811-firewall-public-inbound-block.yaml
tests/: __init__.py  conftest.py  test_cli.py  test_integration.py  test_report_generator.py  test_rule_loader.py
(+12 files in other folders)
